Landing page rewrite base.

--- a/bin/index.css
+++ b/bin/index.css
@@ -1,295 +1,31 @@
-@charset "UTF-8";
-@import url("https://fonts.googleapis.com/css?family=Raleway:900|Roboto:400,700|Roboto+Mono");
-.mouse-icon {
-  border: 2px solid #000;
-  border-radius: 16px;
-  height: 40px;
-  width: 24px;
-  display: block;
-  z-index: 10;
-  opacity: 0.7; }
+.Body {
+  background-color: #FFFFFF;
+  color: #212121;
+  font-family: 'Roboto', sans-serif;
+  font-size: 18px; }
 
-.mouse-icon .wheel {
-  -webkit-animation-name: drop;
-  -webkit-animation-duration: 1s;
-  -webkit-animation-timing-function: linear;
-  -webkit-animation-delay: 0s;
-  -webkit-animation-iteration-count: infinite;
-  -webkit-animation-play-state: running;
-  -webkit-animation-name: drop;
-  animation-name: drop;
-  -webkit-animation-duration: 1s;
-  animation-duration: 1s;
-  -webkit-animation-timing-function: linear;
-  animation-timing-function: linear;
-  -webkit-animation-delay: 0s;
-  animation-delay: 0s;
-  -webkit-animation-iteration-count: infinite;
-  animation-iteration-count: infinite;
-  -webkit-animation-play-state: running;
-  animation-play-state: running; }
-
-.mouse-icon .wheel {
-  position: relative;
-  border-radius: 10px;
-  background: #000;
-  width: 2px;
-  height: 6px;
-  top: 4px;
-  margin-left: auto;
-  margin-right: auto; }
-
-@-webkit-keyframes drop {
-  0% {
-    top: 5px;
-    opacity: 0; }
-  30% {
-    top: 10px;
-    opacity: 1; }
-  100% {
-    top: 25px;
-    opacity: 0; } }
-
-@keyframes drop {
-  0% {
-    top: 5px;
-    opacity: 0; }
-  30% {
-    top: 10px;
-    opacity: 1; }
-  100% {
-    top: 25px;
-    opacity: 0; } }
-
-.Hero {
-  background: #FFEB3B;
-  color: black;
-  height: 100vh;
-  display: flex;
-  align-items: center;
-  flex-direction: column;
-  justify-content: center;
-  margin-bottom: 50px; }
-  @media (min-width: 544px) {
-    .Hero {
-      margin-bottom: 100px; } }
-  .Hero__box {
-    flex: 1;
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-    justify-content: center;
-    text-align: center; }
-  .Hero__icon {
-    height: 6rem; }
-    @media (min-width: 544px) {
-      .Hero__icon {
-        height: 8rem; } }
-  .Hero__title {
-    font-family: 'Raleway', sans-serif;
-    font-weight: 900;
-    font-size: 4rem;
-    margin: 0;
-    text-shadow: 0px 3px 0px #e1d430, 0px 14px 10px rgba(0, 0, 0, 0.15), 0px 24px 2px rgba(0, 0, 0, 0.1), 0px 34px 30px rgba(0, 0, 0, 0.1); }
-    @media (min-width: 544px) {
-      .Hero__title {
-        font-size: 6rem; } }
-  .Hero__slogan {
-    margin-bottom: 50px;
-    display: block; }
-  .Hero__btn {
-    text-decoration: none;
-    color: black;
-    border: 2px solid black;
-    padding: 5px 10px;
-    border-radius: 30px;
-    margin: 0 5px;
-    transition: all .3s ease; }
-    .Hero__btn:focus, .Hero__btn:hover {
-      background-color: black;
-      color: white; }
-    @media (min-width: 544px) {
-      .Hero__btn {
-        padding: 10px 20px; } }
-  .Hero__code {
-    font-family: monospace;
-    background: black;
-    color: white;
-    padding: 8px 15px;
-    margin-top: 25px;
-    display: inline-block;
-    border-radius: 25px; }
-  .Hero__mouse {
-    margin-bottom: 20px;
-    display: none; }
-    @media (min-width: 544px) {
-      .Hero__mouse {
-        display: block; } }
+.Container {
+  padding: 4rem 0rem; }
+  .Container--bg-alpha {
+    background-color: #FFFFFF; }
+  .Container--fg-alpha {
+    color: #FFFFFF; }
+  .Container--bg-bravo {
+    background-color: #212121; }
+  .Container--fg-bravo {
+    color: #212121; }
+  .Container--bg-charlie {
+    background-color: #E91E63; }
+  .Container--fg-charlie {
+    color: #E91E63; }
+  .Container--bg-delta {
+    background-color: #2196F3; }
+  .Container--fg-delta {
+    color: #2196F3; }
+  .Container--bg-foxtrot {
+    background-color: #CDDC39; }
+  .Container--fg-foxtrot {
+    color: #CDDC39; }
 
 .Heading {
-  font-family: 'Raleway', sans-serif;
-  font-weight: 900;
-  text-transform: uppercase;
-  letter-spacing: 3px; }
-  .Heading--h1 {
-    font-size: 2.5rem; }
-  .Heading__code {
-    background-color: #c1e05a;
-    color: black;
-    font-family: "Roboto Mono";
-    font-weight: 400;
-    border: 1px solid #8ba630;
-    border-radius: 5px;
-    font-size: 0.8rem;
-    padding: 2px 5px;
-    letter-spacing: 1px;
-    text-transform: lowercase; }
-
-.ExampleColumn {
-  background-color: #FFC107;
-  min-height: 30px;
-  border-radius: 5px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  color: white;
-  margin: 0;
-  padding: 0;
-  font-weight: 700; }
-  .ExampleColumn--large {
-    min-height: 200px; }
-
-.Layout__column:nth-child(2n) .ExampleColumn {
-  background-color: #FF9800; }
-
-.Slice {
-  margin-bottom: 20px; }
-  @media (min-width: 544px) {
-    .Slice {
-      margin-bottom: 50px; } }
-
-.Code {
-  background-color: #f5f1da;
-  color: #bb4e31;
-  font-family: "Roboto Mono";
-  font-weight: 400;
-  border: 1px solid #c3bb87;
-  border-radius: 5px;
-  font-size: 0.8rem;
-  padding: 2px 5px;
-  letter-spacing: 1px; }
-
-.Paragraph {
-  line-height: 25px; }
-  .Paragraph--no-bottom {
-    margin-bottom: 0px; }
-
-.Link {
-  text-shadow: 0.05556em 0 0 #fff,0.11111em 0 0 #fff,0.16667em 0 0 #fff,-0.05556em 0 0 #fff,-0.11111em 0 0 #fff,-0.16667em 0 0 #fff;
-  background-image: -webkit-linear-gradient(#fe8e47, #fe8e47);
-  background-image: -moz-linear-gradient(#fe8e47, #fe8e47);
-  background-image: -ms-linear-gradient(#fe8e47, #fe8e47);
-  background-image: linear-gradient(#fe8e47, #fe8e47);
-  background-position: 0 1.06em;
-  background-size: 1px 1px;
-  background-repeat: repeat-x;
-  font-style: italic;
-  color: black;
-  text-decoration: none;
-  font-weight: 700; }
-
-.Pre {
-  font-family: 'Roboto Mono', monospace;
-  font-weight: 400;
-  width: 100%;
-  margin: 0;
-  padding: 0; }
-
-.Navigation {
-  background-color: #FFEB3B;
-  padding: 1rem;
-  position: fixed;
-  width: 100%;
-  z-index: 999;
-  top: 0;
-  left: 0; }
-  .Navigation__icon {
-    height: 3rem; }
-  .Navigation__list {
-    margin: 0;
-    padding: 0; }
-  .Navigation__item {
-    margin: 0;
-    padding: 0;
-    list-style-type: none;
-    display: inline-block; }
-    .Navigation__item + .Navigation__item {
-      margin-left: 0.8rem; }
-  .Navigation__link {
-    font-weight: 700;
-    text-decoration: none;
-    color: black; }
-
-.DocBody {
-  padding-top: 6rem; }
-  @media (min-width: 544px) {
-    .DocBody {
-      padding-top: 10rem; } }
-
-.ClassMap {
-  font-family: "Roboto Mono";
-  background-color: #f0f0f0;
-  padding: 3rem;
-  margin-bottom: 2rem; }
-  .ClassMap__parent {
-    list-style-type: square;
-    font-weight: bold;
-    margin-bottom: 0.5rem; }
-  .ClassMap__child {
-    color: #646464;
-    list-style-type: none;
-    margin-bottom: 0.5rem; }
-  .ClassMap__meta {
-    list-style-type: none;
-    margin-bottom: 0.5rem; }
-    .ClassMap__meta::before {
-      content: "✪ "; }
-  .ClassMap__viewport-placeholder {
-    background: #df5195;
-    color: white;
-    padding: 2px 5px;
-    border-radius: 3px;
-    margin: 0 2px; }
-  .ClassMap__viewport-size {
-    background: #5197df;
-    color: white;
-    padding: 2px 5px;
-    border-radius: 3px;
-    margin: 0 2px; }
-
-.Table {
-  width: 100%; }
-  .Table__header {
-    text-align: left;
-    background-color: #f0f0f0;
-    padding: 0.8rem 0.5rem; }
-  .Table__cell {
-    padding: 0.8rem 0.5rem; }
-
-.HeroExample {
-  background-color: #1e1e1e;
-  color: white; }
-  .HeroExample__header {
-    font-weight: 700;
-    font-size: 0.8rem;
-    color: #646464;
-    text-transform: uppercase;
-    letter-spacing: 2px; }
-  .HeroExample__stat {
-    font-size: 1.5rem; }
-
-body {
-  padding: 0;
-  margin: 0;
-  font-family: 'Roboto', sans-serif;
-  font-weight: 400; }
+  font-family: 'Raleway', sans-serif; }
