--- a/sass/heading.scss
+++ b/sass/heading.scss
@@ -1,23 +1,3 @@
 .Heading {
-    font-family: 'Raleway', sans-serif;
-    font-weight: 900;
-    text-transform: uppercase;
-    letter-spacing: 3px;
-
-    @at-root &--h1 {
-        font-size: 2.5rem;
-    }
-
-    @at-root &__code {
-        background-color: rgb(193, 224, 90);
-        color: black;
-        font-family: 'Roboto Mono', ;
-        font-weight: 400;
-        border: 1px solid rgb(139, 166, 48);
-        border-radius: 5px;
-        font-size: 0.8rem;
-        padding: 2px 5px;
-        letter-spacing: 1px;
-        text-transform: lowercase;
-    }
+    font-family: unquote(map-get($fonts, bravo));
 }
