--- a/src/core/layout/layout.scss
+++ b/src/core/layout/layout.scss
@@ -5,6 +5,8 @@
     max-width: $layout_max_width;
     overflow: hidden;
 
+    @include debug(red);
+
     //
     // -------------------------------------------------------------------------
     // Edges.
