--- a/src/core/row/row.scss
+++ b/src/core/row/row.scss
@@ -7,6 +7,8 @@
     padding-left: $half-gutter-width;
     padding-right: $half-gutter-width;
 
+    @include debug(orange);
+
     //
     // -------------------------------------------------------------------------
     // Column gutters.
