--- a/src/core/column/column.scss
+++ b/src/core/column/column.scss
@@ -2,6 +2,8 @@
     flex: 1;
     display: none;
 
+    @include debug(green);
+
     //
     // -------------------------------------------------------------------------
     // Visibility.
