--- a/sass/config.scss
+++ b/sass/config.scss
@@ -3,11 +3,11 @@ $font_bravo: 'Roboto', sans-serif;
 $font_charlie: 'Oswald', sans-serif;
 
 $colors: (
-    brand_alpha:   #000000,
-    brand_bravo:   #FFFF00,
-    shade_alpha:   #ECEFF1,
-    shade_bravo:   #607D8B,
-    shade_charlie: #455A64,
-    shade_delta:   #37474F,
-    shade_echo:    #263238,
+    brand-alpha:   #000000,
+    brand-bravo:   #FFFF00,
+    shade-alpha:   #ECEFF1,
+    shade-bravo:   #607D8B,
+    shade-charlie: #455A64,
+    shade-delta:   #37474F,
+    shade-echo:    #263238,
 );
