--- a/sass/vanilla.scss
+++ b/sass/vanilla.scss
@@ -1,20 +1,21 @@
 body {
-    background-color: map-get($colors, brand_alpha);
-    font-family: $font_bravo;
     font-size: 16px;
     font-weight: 700;
+    font-family: $font_bravo;
+    background-color: map-get($colors, brand-alpha);
+    line-height: 1.8;
 }
 
 h1 {
-    font-family: $font_charlie;
     font-size: 3rem;
     font-weight: bold;
     text-transform: uppercase;
+    font-family: $font_charlie;
 }
 
 h2, h3, h4, h5, h6 {
-    font-family: $font_alpha;
     font-weight: bold;
+    font-family: $font_alpha;
 }
 
 h2 {
@@ -26,5 +27,5 @@ h3 {
 }
 
 a {
-    color: map-get($colors, shade_alpha);
+    color: map-get($colors, shade-alpha);
 }
