--- a/sass/bem/column.scss
+++ b/sass/bem/column.scss
@@ -1,19 +1,22 @@
 .Column {
-    height: 5rem;
+    height: 3rem;
     opacity: 0.5;
-    transition: opacity .5s ease;
-    border: 2px solid map-get($colors, shade-alpha);
+    transition: opacity 1s ease;
 
-    &:hover {
+    &--inactive {
+        border: 2px solid map-get($colors, shade-alpha);
+    }
+
+    &--focused {
         opacity: 1;
-        box-shadow: inset 0px 0px 10px transparentize(map-get($colors, shade-alpha), 0.5);
+        box-shadow: inset 0px 0px 15px transparentize(map-get($colors, shade-alpha), 0.5);
     }
 
     &--active {
-        border: 2px solid map-get($colors, brand-bravo);
+        border: 4px solid map-get($colors, brand-bravo);
 
-        &:hover {
-            box-shadow: inset 0px 0px 10px transparentize(map-get($colors, brand-bravo), 0.5);
+        .Column--focused {
+            box-shadow: inset 0px 0px 15px transparentize(map-get($colors, brand-bravo), 0.5);
         }
     }
 }
