--- a/bin/index.css
+++ b/bin/index.css
@@ -427,9 +427,12 @@ body {
 .Layout, .Layout-quick {
   display: flex;
   flex-direction: column;
-  margin: 0 auto;
-  max-width: 75rem;
   overflow: hidden; }
+  .Layout--solid, .Layout-quick {
+    margin: 0 auto;
+    max-width: 75rem; }
+  .Layout--fluid {
+    width: 100%; }
   .Layout--edges, .Layout-quick {
     overflow: auto; }
     .Layout--edges .Layout__row, .Layout-quick .Layout__row, .Layout--edges .Layout__row-quick, .Layout-quick .Layout__row-quick {
