--- a/sass/vanilla.scss
+++ b/sass/vanilla.scss
@@ -11,10 +11,6 @@ h1 {
     font-weight: bold;
     text-transform: uppercase;
     font-family: $font_charlie;
-
-    @include viewport-min('sm') {
-        font-size: 3rem;
-    }
 }
 
 h2, h3, h4, h5, h6 {
@@ -32,6 +28,10 @@ h3 {
 
 a {
     color: map-get($colors, shade-alpha);
+
+    &:hover, &:focus {
+        text-decoration: none;
+    }
 }
 
 code {
